ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /customers
        pathType: Prefix
        backend:
          service:
            name: customer
            port:
              number: 80
      - path: /inventory
        pathType: Prefix
        backend:
          service:
            name: inventory
            port:
              number: 80
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product
            port:
              number: 80
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: cart
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  annotations:
   konghq.com/plugins: twelve-per-min
spec:
  type: NodePort
  selector:
    app: cart
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001

---
apiVersion: v1
kind: Service
metadata:
  name: order
  annotations:
   konghq.com/plugins: twelve-per-min
spec:
  type: NodePort
  selector:
    app: order
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30002
